# spotify-recommender-training

./: .dockerignore  .gitignore  Dockerfile  README.md  buildspec.yml  cluster.yml  mlflow_serve.sh  pyproject.toml  spotify_recommendations.yml
conf/base/: catalog.yml  mlflow.yml  parameters.yml
conf/base/catalog/: active_catalog.yml  inactive_catalog.yml
notebooks/: GeniusSongLyrics.ipynb  LastFMTags.ipynb  LikedSongsSpotify.ipynb  WANDB-DEMO.ipynb  cosine-similarity-experiment.ipynb  create-mpd-networkx.ipynb  dedup-mpd-given-id-col.ipynb  insert-track-features-into-mongo.ipynb  mpd-playlist-features.ipynb  multiprocess_clean_mpd.ipynb  obfuscate-mpd.ipynb  scrape-track-features-from-spotify.ipynb  select-mpd-song-features.ipynb
source/: conf.py  index.rst
src/: requirements.txt  setup.py
src/spotify_recommendations/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/spotify_recommendations/extras/dask/: JSONDataSet.py
src/spotify_recommendations/extras/mlflow/: cosine_model.py  loader_cosine_model.py  models.py  pyfunc_cosine_model.py
src/spotify_recommendations/pipelines/process_mpd/: __init__.py  clean_mpd.py  cosine_experiment.py  dask_utils.py  insert_tracks_into_mongo.py  mpd_playlist_features.py  obfuscate_mpd_playlist.py  pipeline.py  process_spotify.py  scrape_spotipy.py  utils.py
src/tests/: test_run.py
