[tool.kedro]
package_name = "spotify_recommendations"
project_name = "Spotify Recommendations"
project_version = "0.17.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/spotify_recommendations -ra"""

[tool.poetry]
name = "spotify_recommendations"
version = "0.1.0"
description = ""
authors = ["Anish Shah <anish.shah.emails@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
kedro = "^0.17.4"
kedro-viz = "^3.14.0"
kedro-mlflow = "^0.7.3"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
dask = {extras = ["distributed"], version = "^2021.8.1"}
jupyterlab = "^3.1.7"
bokeh = "^2.3.3"
loguru = "^0.5.3"
pyarrow = "^5.0.0"
tqdm = "^4.62.1"
python-dotenv = "^0.19.0"
spotipy = "^2.19.0"
flatdict = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
